--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     window.location.href("https://airtable.com/shri12sBbDwtEyWZF");
   </script>
   <body>
-
+    You are being redirected to survey host page
   </body>
 </html>
