--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>You are being redirected to survey host page</title>
-    <meta http-equiv="refresh" content="0;URL='https://airtable.com/shri12sBbDwtEyWZF'" />
+    <title>Nest Academy Feedback</title>
+    <style media="screen">
+      html{width:100%;height:100%;overflow:hidden}body{width:100%;height:100%;margin:0}.airtable-embed{position:absolute;top:0;left:0;width:100%;height:100%;margin:0;height:100vh;z-index:1}.container{position:absolute;top:0;left:0;z-index:0;width:100%;height:100%;margin:0;height:100vh;background:url(images/logo-symbol.svg);background-repeat:no-repeat;background-position:center center;background-size:100px 100px;-webkit-animation:Gradient 3s ease infinite;-moz-animation:Gradient 3s ease infinite;animation:Gradient 3s ease infinite}@-webkit-keyframes Gradient{0%{-webkit-filter:opacity(1)}50%{-webkit-filter:opacity(.5);transform:scale(.8)}100%{-webkit-filter:opacity(1)}}
+    </style>
   </head>
-  <script type="text/javascript">
-    window.location.href("https://airtable.com/shri12sBbDwtEyWZF");
-  </script>
   <body>
-    You are being redirected to survey host page
+    <div class="container"></div>
+    <iframe class="airtable-embed" src="https://airtable.com/embed/shri12sBbDwtEyWZF?backgroundColor=pink" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
   </body>
 </html>
